--- a/hotel_website/css/style.css
+++ b/hotel_website/css/style.css
@@ -23,6 +23,10 @@ h1, h2, h3 {
     padding-bottom: 20px;
 }
 
+.clr {
+    clear: both;
+}
+
 .btn {
     display: inline-block;
     font-size: 12px;
@@ -37,6 +41,11 @@ h1, h2, h3 {
 
 .light-btn {
     background-color: wheat;
+}
+
+.background-primary {
+    background-color: rgb(248, 191, 2);
+    color: black;
 }
 
 .btn:hover {
@@ -127,4 +136,19 @@ h1, h2, h3 {
 
 #home-info .home-content p {
     padding-bottom: 30px;
+}
+
+.box {
+    float: left;
+    width: 33.33%;
+    text-align: center;
+    padding: 50px;
+}
+
+#main-footer {
+    background-color: #444;
+    color: #fff;
+    text-align: center;
+    padding: 20px;
+    font-weight: bold;
 }
