--- a/hotel_website/css/style.css
+++ b/hotel_website/css/style.css
@@ -152,3 +152,48 @@ h1, h2, h3 {
     padding: 20px;
     font-weight: bold;
 }
+
+#about {
+    padding: 30px;
+    margin: auto;
+}
+
+.about-content {
+    float: left;
+    width: 50%;
+}
+
+.about-image {
+    float: right;
+    width: 50%;
+}
+
+.about-image img {
+    width: 100%;
+    max-height: 500px;
+    border-radius: 50%;
+}
+
+#testimonials {
+    padding: 30px;
+    background: url(../img/test-bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    text-align: center;
+    min-height: 500px;
+}
+
+.testimonial-card {
+    opacity: 0.9;
+    text-align: center;
+    color: #fff;
+    margin: 20px;
+    border-radius: 10px;
+    font-weight: bold;
+}
+
+.testimonial-card img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
