--- a/hotel_website/css/style.css
+++ b/hotel_website/css/style.css
@@ -7,6 +7,7 @@
 html, body {
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.7em;
+    height: 100%;
 }
 
 a {
@@ -196,4 +197,32 @@ h1, h2, h3 {
     width: 100px;
     height: 100px;
     border-radius: 50%;
+}
+
+#contact {
+    padding: 30px;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.form-group input, .form-group textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px #ddd solid;
+}
+
+#contact-form .btn {
+    margin: 20px 0px;
+}
+
+#contact h1 {
+    margin: 10px 0px;
 }
